# TransactionFraudGuard

./: .replit  1_multiple_accounts.py  2_limit_monitoring.py  3_fraud_detection.py  app.py  app_improvements.py  app_new.py  auth.py  create_fraud_model.py  enhanced_financial_alerts.py  financial_alerts.db  financial_alerts.db.backup  fraud_detection.db  fraud_detection_optimized.db  fraud_detection_pipeline.pkl  init_databases.py  init_financial_alerts.py  pyproject.toml  replit.md  sidebar.py  streamlit_config.py  theme_utils.py  top_navigation.py  transaction_limit_monitoring.py  transaction_monitoring.db  transactions.db
.streamlit/: config.toml  custom.css  pages.toml
attached_assets/: Pasted--Detailed-Risk-Analysis-All-Suspicious-High-Risk-Medium-Risk-Transaction-Patterns-TypeError-T-1747867650006.txt  Pasted-Valid-properties-anchor-If-set-to-an-opposite-letter-axis-id-e-g-x2-y--1747867739234.txt  Pasted-Valid-properties-anchor-If-set-to-an-opposite-letter-axis-id-e-g-x2-y--1747895420822.txt  README.md  bank_monitoring.db-shm  bank_monitoring.db-wal  fraud_detection_pipeline.pkl  requirements.txt
backup_unused_files/: init_alerts_db.py  initialize_real_alerts.py
pages/: 1_multiple_accounts.py  2_limit_monitoring.py  3_fraud_detection.py  4_financial_alerts.py  user_profile.py
